--- a/src/pages/events/events.module.css
+++ b/src/pages/events/events.module.css
@@ -1,21 +1,14 @@
 .container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
 }
 
-.nav {
+.content {
     display: flex;
+    flex-direction: column;
     align-content: flex-start;
     border-bottom: 1px solid #bebebe;
-}
-
-.footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.text {
-    color: #999999;
 }
