--- a/src/index.css
+++ b/src/index.css
@@ -20,32 +20,32 @@ html {
 }
 
 :root {
-    --primary-color_0: #6CCBF4;
-    --primary-color_1: #99DAF6;
-    --primary-color_2: #81D2F4;
-    --primary-color_3: #58C5F5;
-    --primary-color_4: #44C0F6;
-    
-    --secondary-color1_0: #72ADF5;
-    --secondary-color1_1: #9DC5F6;
-    --secondary-color1_2: #86B8F5;
-    --secondary-color1_3: #5EA3F5;
-    --secondary-color1_4: #4B99F6;
+    --primary-color_0: #6ccbf4;
+    --primary-color_1: #99daf6;
+    --primary-color_2: #81d2f4;
+    --primary-color_3: #58c5f5;
+    --primary-color_4: #44c0f6;
 
-    --secondary-color2_0: #66F4E5;
-    --secondary-color2_1: #94F5EB;
-    --secondary-color2_2: #7BF4E7;
-    --secondary-color2_3: #51F4E3;
-    --secondary-color2_4: #3CF5E2;
+    --secondary-color1_0: #72adf5;
+    --secondary-color1_1: #9dc5f6;
+    --secondary-color1_2: #86b8f5;
+    --secondary-color1_3: #5ea3f5;
+    --secondary-color1_4: #4b99f6;
 
-    --complement-color_0: #FFB96A;
-    --complement-color_1: #FFCF9A;
-    --complement-color_2: #FFC381;
-    --complement-color_3: #FFAE54;
-    --complement-color_4: #FFA43E;
+    --secondary-color2_0: #66f4e5;
+    --secondary-color2_1: #94f5eb;
+    --secondary-color2_2: #7bf4e7;
+    --secondary-color2_3: #51f4e3;
+    --secondary-color2_4: #3cf5e2;
+
+    --complement-color_0: #ffb96a;
+    --complement-color_1: #ffcf9a;
+    --complement-color_2: #ffc381;
+    --complement-color_3: #ffae54;
+    --complement-color_4: #ffa43e;
 
     --background-color_primary: white;
-    --background-color_main: #F2F4F8;
+    --background-color_main: #f2f4f8;
 
     --gapSize-small: 5px;
     --gapSize-medium: 10px;
@@ -56,7 +56,7 @@ html {
     --font_size-large: 20px;
     --font_size_extraLarge: 24px;
     --font_size_extraExtraLarge: 35px;
-    
+
     --font_weight_normal: normal;
     --font_weight_halfBold: 500;
     --font_weight_bold: bold;
